--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,9 +8,12 @@
     <form (ngSubmit)="login()">
       <input type="text" [(ngModel)]="userName" name="userName" placeholder="Username" required /> <br> <br>
       <input type="password" [(ngModel)]="userPassword" name="userPassword" placeholder="Password" required /> <br> <br>
-  
+
       <button type="submit">LOGIN</button>
       <div *ngIf="error" style="color:red">{{ error }}</div>
     </form>
+    <p class="register-link">
+      New here? <a [routerLink]="['/registration']">Create an account</a>
+    </p>
   </div>
 </div>
