--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4 card p-4 shadow rounded-4 bg-light">
     <h2 class="text-center mb-3 text-primary">Member Registration</h2>
-  
+
     <form (ngSubmit)="onSubmit()" #regForm="ngForm">
         <div class="d-flex gap-4 mb-3">
           <div class="flex-fill space-down">
@@ -12,7 +12,7 @@
             <input type="email" class="form-control" name="email" [(ngModel)]="member.email" required email />
           </div>
         </div>
-      
+
         <div class="d-flex gap-4 mb-3 space-down">
           <div class="flex-fill">
             <label>Phone</label>
@@ -23,7 +23,7 @@
             <input type="text" class="form-control" name="address" [(ngModel)]="member.address" required />
           </div>
         </div>
-      
+
         <div class="d-flex gap-4 mb-3 space-down">
           <div class="flex-fill">
             <label>Username</label>
@@ -34,7 +34,7 @@
             <input type="password" class="form-control" name="password" [(ngModel)]="member.password" required minlength="8" />
           </div>
         </div>
-      
+
         <div class="text-center">
           <button class="btn btn-primary" type="submit" [disabled]="!regForm.form.valid">
             Register
@@ -45,5 +45,7 @@
             {{ errorMessage }}
           </div>
       </form>
-      
+      <p class="login-link">
+        Already have an account? <a [routerLink]="['/login']">Login</a>
+      </p>
   </div>
